--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9058,7 +9058,7 @@ body:not(.sidebar-mini)
     background-color: #6777ef;
 }
 .theme-white .border-primary {
-    border-color: #fff !important;
+    border-color: #6777ef !important;
 }
 /* .theme-white .navbar {
     background-color: #fff;
