--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -31,6 +31,9 @@
     --primary-light: #a2aef2;
     --primary-very-light: #e8ebfc;
     --primary-hover: #5666d6;
+    --primary-dark: #5666d6;
+    --text-light: #fff;
+    --text-dark: #343a40;
     --text-color: #fff;
     --breakpoint-xs: 0;
     --breakpoint-sm: 576px;
@@ -46,6 +49,7 @@
 }
 *{
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    /* font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; */
 }
 *::selection{
     background-color: #f6f6f6;
@@ -1627,6 +1631,11 @@ pre code {
     .offset-xl-11 {
         margin-left: 91.666667%;
     }
+}
+@media (max-width: 767.98px) { /* sm breakpoint */
+  .w-100-sm {
+    width: 100% !important;
+  }
 }
 .table {
     width: 100%;
