--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3846,7 +3846,7 @@ h6 .badge {
     font-size: 18px;
 }
 .breadcrumb {
-    background-color: #f9f9f9;
+    background-color: transparent;
 }
 .breadcrumb .breadcrumb-item {
     line-height: 1;
